--- a/pong_05.ipynb
+++ b/pong_05.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,34 +24,43 @@
      "output_type": "stream",
      "text": [
       "ball hists left paddle\n",
-      "ball hists right paddle 1528452549.118251\n",
-      "ball hists left paddle\n",
       "hit walls\n",
-      "ball hists right paddle 1528452553.7518935\n",
-      "hit walls\n",
-      "ball hists left paddle\n",
-      "hit walls\n",
-      "ball hists right paddle 1528452558.5152884\n",
-      "ball hists left paddle\n",
-      "hit walls\n",
-      "ball hists right paddle 1528452562.22148\n",
-      "hit walls\n",
-      "hit walls\n",
+      "ball hists right paddle 1528468384.1788642\n",
       "ball hists left paddle\n",
       "hit walls\n",
       "hit walls\n",
-      "ball hists right paddle 1528452569.525971\n",
-      "hit walls\n",
-      "ball hists right paddle 1528452573.4273834\n",
-      "hit walls\n",
-      "ball hists left paddle\n",
-      "ball hists right paddle 1528452584.7037117\n",
+      "ball hists right paddle 1528468388.9145877\n",
       "ball hists left paddle\n",
       "hit walls\n",
-      "ball hists right paddle 1528452589.764872\n",
+      "ball hists right paddle 1528468392.783635\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528468396.329078\n",
       "hit walls\n",
       "ball hists left paddle\n",
-      "ball hists right paddle 1528452594.9272532\n"
+      "ball hists right paddle 1528468399.5018847\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528468402.7416275\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528468405.6205578\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528468408.5024753\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528468411.4487932\n",
+      "hit walls\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528468414.1593041\n",
+      "hit walls\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528468416.8738112\n",
+      "ball hists left paddle\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528468422.733669\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528468456.5814393\n"
      ]
     }
    ],
@@ -350,7 +359,7 @@
     "        if game.right_wins():\n",
     "            game.score['right'] += 1\n",
     "            game.reset()\n",
-    "        game.draw(trace_on=True)\n",
+    "        game.draw(trace_on=False)\n",
     "        clock.tick(FPS)\n",
     "        if game.score['left'] > 15 or game.score['right'] > 15:\n",
     "            break\n",
