Presentacion Godot engine

--- a/pong_05.ipynb
+++ b/pong_05.ipynb
@@ -11,7 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Versión completa del juego. Usamos sprites pero para darle un aspecto más retro aun."
+    "Versión completa del juego. Con respecto a la versión anterior\n",
+    "se han hecho varios cambios:\n",
+    "\n",
+    " - Usamos _sprites_ pero para darle un aspecto más retro aun.\n",
+    " - Sonidos cuando rebota la pelota en los bordes superior e inferior, y cuando\n",
+    "   rebota en las raquetas o _paddles_\n",
+    " - El juego lleva el recuento de la puntuación, y se muestra en pantalla\n",
+    " - El ángulo de rebote de la pelota en las raquetas depende del\n",
+    "   la posición relativa de la bola con respecto a la raqueta: Si golpea\n",
+    "   el centro de la raqueta, el ángulo será más plano; si golpea\n",
+    "  "
    ]
   },
   {
